workspace-sf/force-app/main/default/objects/ComplementoIndenizacao__c/ComplementoIndenizacao__c.object-meta.xml
<CustomObject>
    <description>Objeto criado pela frente de Sinistro para complementar o Pagamento de Garantia</description>
    <label>Complemento de Indenização</label>
    <nameField>
        <displayFormat>CG-{00000}</displayFormat>
        <label>Nome de Complemento de Indenização</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complementos de Indenizações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>