workspace-sf/force-app/main/default/objects/ComplementoIndenizacao__c/fields/BeneficiarioGarantia__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarioGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiario da Garantia</label>
    <referenceTo>BeneficiarioGarantia__c</referenceTo>
    <relationshipLabel>Complementos de Indenizações</relationshipLabel>
    <relationshipName>Complementos_de_Indeniza_es</relationshipName>
    <type>Lookup</type>
</CustomField>