workspace-sf/force-app/main/default/objects/ComplementoIndenizacao__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prazo de regulação excedido</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>