workspace-sf/force-app/main/default/objects/ComplementoIndenizacao__c/fields/PagamentoGarantia__c.field-meta.xml
<CustomField>
    <fullName>PagamentoGarantia__c</fullName>
    <label>Pagamento de garantia</label>
    <referenceTo>PagamentoGarantia__c</referenceTo>
    <relationshipLabel>Complementos de Indenizações</relationshipLabel>
    <relationshipName>ComplementosIndenizacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>