workspace-sf/force-app/main/default/objects/ComplementoIndenizacao__c/fields/TipoComplemento__c.field-meta.xml
<CustomField>
    <fullName>TipoComplemento__c</fullName>
    <label>Tipo Complemento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Juros</fullName>
            </value>
            <value>
                <fullName>Atualização Monetária</fullName>
            </value>
            <value>
                <fullName>Deságio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>