workspace-sf/force-app/main/default/objects/ComplementoIndenizacao__c/fields/ValorFormula__c.field-meta.xml
<CustomField>
    <fullName>ValorFormula__c</fullName>
    <description>Campo utilizado para ajustar o valor caso seja &quot;Deságio&quot; e também para ser sumarizado no objeto mestre</description>
    <formula>IF( ISPICKVAL( TipoComplemento__c , &quot;Deságio&quot;), Valor__c*(-1), Valor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>